# stf

./: .clang-format  .clang-tidy  .codecov.yml  .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  changelog.md  index.html  license.md  readme.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  checks.yml  deploy.yml  verify.yml
code/: CMakeLists.txt
code/cmake/: AddressSanitizer.cmake  CoverageBuildType.cmake  GenerateDocs.cmake
code/src/: CMakeLists.txt
code/src/include/interface/stf/: types.hpp
code/src/include/interface/stf/alg/: circle.hpp  interpolation.hpp  transform.hpp
code/src/include/interface/stf/gfx/: color.hpp
code/src/include/interface/stf/math/: constants.hpp  vector.hpp
code/src/include/stf/: types.hpp
code/src/include/stf/alg/: circle.hpp  transform.hpp
code/src/include/stf/math/: vector.hpp
code/src/stf/: CMakeLists.txt  constants.h  docs.hpp  types.h
code/src/stf/alg/: circle.h  circle.hpp  interpolation.h  interpolation.hpp  transform.h
code/src/stf/include/interface/stf/: enums.hpp  platform.hpp  stf.hpp  types.hpp
code/src/stf/include/interface/stf/alg/: clipping.hpp  containment.hpp  hull.hpp  interpolation.hpp  intersect.hpp  intersection.hpp  intersects.hpp  spherical.hpp  statistics.h  statistics.hpp  tessellation.hpp  transform.hpp  triangulation.hpp
code/src/stf/include/interface/stf/cam/: frustum.hpp  scamera.hpp
code/src/stf/include/interface/stf/ds/: indexed_list.hpp  slot_map.hpp
code/src/stf/include/interface/stf/geom/: aabb.hpp  holygon.hpp  hyperplane.hpp  hypersphere.hpp  obb.hpp  polygon.hpp  polyline.hpp  ray.hpp  segment.hpp  sphere.hpp
code/src/stf/include/interface/stf/gfx/: color.hpp  gradient.hpp
code/src/stf/include/interface/stf/math/: aabb.hpp  basis.hpp  cinterval.hpp  constants.hpp  crange.hpp  enums.hpp  interpolation.hpp  interval.hpp  line.hpp  matrix.hpp  polyline.hpp  range.hpp  raw.hpp  scalar.hpp  segment.hpp  spherical.hpp  transform.hpp  vector.hpp
code/src/stf/include/interface/stf/spatial/: interval_tree.hpp  quad_tree.hpp
code/src/stf/math/: matrix.h  matrix.hpp  raw.h  raw.hpp  vector.h
code/tests/: CMakeLists.txt  main.cpp  tests.cpp
code/tests/alg/: circle_tests.cpp  transform_tests.cpp
code/tests/alg/scaffolding/: circle.hpp  transform.h
code/tests/cpp/stf/alg/: circle_tests.cpp  interpolation_tests.cpp
code/tests/cpp/stf/gfx/: color_tests.cpp
code/tests/include/private/stf/alg/scaffolding/: circle.hpp  transform.hpp
code/tests/include/private/stf/gfx/scaffolding/: color.hpp
code/tests/math/: mtx4_tests.cpp  tmp.cpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp  vec5_tests.cpp  vec_tests.cpp
code/tests/math/scaffolding/: vector.h
code/tests/scaffolding/: compare.h  transform.h  vec.h
code/tests/stf/: CMakeLists.txt
code/tests/stf/cpp/stf/: enums_tests.cpp
code/tests/stf/cpp/stf/alg/: clipping_tests.cpp  hull_tests.cpp  interpolation_tests.cpp  intersect_tests.cpp  intersection_tests.cpp  intersects_tests.cpp  spherical_tests.cpp  statistics_tests.cpp  tessellation_tests.cpp  transform_tests.cpp  triangulation_tests.cpp
code/tests/stf/cpp/stf/cam/: frustum_tests.cpp  scamera_tests.cpp
code/tests/stf/cpp/stf/ds/: indexed_list_tests.cpp  slot_map.cpp  unordered_vector.cpp
code/tests/stf/cpp/stf/geom/: aabb2_tests.cpp  hypersphere3_tests.cpp  obb2_tests.cpp  obb3_tests.cpp  polygon_tests.cpp  polyline2_tests.cpp  ray2_tests.cpp  segment2_tests.cpp  sphere3_tests.cpp  sphere_tests.cpp
code/tests/stf/cpp/stf/gfx/: color_tests.cpp
code/tests/stf/cpp/stf/math/: aabb2_tests.cpp  cinterval_tests.cpp  crange_tests.cpp  interpolation_tests.cpp  interval_tests.cpp  mtx2_tests.cpp  mtx3_tests.cpp  mtx4_tests.cpp  range_tests.cpp  segment2_tests.cpp  spherical_tests.cpp  tmp.cpp  transform_tests.cpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp  vec5_tests.cpp
code/tests/stf/cpp/stf/spatial/: interval_tree_tests.cpp
code/tests/stf/include/private/stf/alg/scaffolding/: clipping.hpp  interpolation.hpp  intersect.hpp  intersection.hpp  intersects.hpp  spherical.hpp  statistics.hpp  tessellation.hpp  transform.hpp
code/tests/stf/include/private/stf/cam/scaffolding/: frustum.hpp  scamera.hpp
code/tests/stf/include/private/stf/ds/scaffolding/: indexed_list.hpp
code/tests/stf/include/private/stf/geom/scaffolding/: aabb.hpp  hypersphere.hpp  obb.hpp  polygon.hpp  polyline.hpp  ray.hpp  segment.hpp  sphere.hpp
code/tests/stf/include/private/stf/gfx/scaffolding/: color.hpp
code/tests/stf/include/private/stf/math/scaffolding/: aabb.hpp  cinterval.hpp  crange.hpp  interpolation.hpp  interval.hpp  matrix.hpp  range.hpp  segment.hpp  spherical.hpp  transform.hpp  vector.hpp
code/tests/stf/include/private/stf/scaffolding/: verify.hpp
code/tests/stf/include/private/stf/scaffolding/alg/: clipping.hpp  hull.hpp  intersect.hpp  intersects.hpp  statistics.hpp  tessellation.hpp  triangulation.hpp
code/tests/stf/include/private/stf/scaffolding/cam/: frustum.hpp  scamera.hpp
code/tests/stf/include/private/stf/scaffolding/ds/: indexed_list.hpp  slot_map.hpp
code/tests/stf/include/private/stf/scaffolding/geom/: aabb.hpp  hypersphere.hpp  obb.hpp  polygon.hpp  polyline.hpp  ray.hpp  segment.hpp
code/tests/stf/include/private/stf/scaffolding/gfx/: color.hpp
code/tests/stf/include/private/stf/scaffolding/math/: cinterval.hpp  interpolation.hpp  interval.hpp  matrix.hpp  spherical.hpp  transform.hpp  vector.hpp
code/tests/stf/include/private/stf/scaffolding/spatial/: interval_tree.hpp
code/tests/stf/include/private/stf/spatial/scaffolding/: interval_tree.hpp
docs/: .gitignore  architecture.md  contributing.md  support.md  todo.md
docs/dev/: aabb_8hpp.html  aabb_8hpp__incl.md5  aabb_8hpp_source.html  annotated.html  annotated_dup.js  basis_8hpp.html  basis_8hpp.js  basis_8hpp__incl.md5  basis_8hpp_source.html  cinterval_8hpp.html  cinterval_8hpp__incl.map  cinterval_8hpp__incl.md5  cinterval_8hpp_source.html  classes.html  classstf_1_1cam_1_1frustum.html  (+708 more)
tmp/: coverage.sh  simple.cpp
(+80 files in other folders)
